<resources>
    <string name="app_name">AutoChessRPG</string>
    <string name="game_name">自走棋-地城探索</string>
    <string name="ui_mainPage_continueGame">繼續遊戲</string>
    <string name="ui_mainPage_startNewGame">開始新遊戲</string>
    <string name="ui_mainPage_illustration">圖鑒</string>
    <string name="ui_mainPage_item">物品</string>
    <string name="ui_mainPage_other">其他</string>
    <string name="ui_mainPage_about">關於</string>
    <string name="ui_mainPage_leave">離開</string>
    <string name="ui_mainPage_isConfirmRestartGame">是否開始新遊戲?</string>
    <string name="ui_mainPage_isLeaveGame">是否離開遊戲?</string>
    <string name="ui_mainPage_tapToStartGame">點擊畫面開始遊戲</string>
    <string name="ui_mainPage_doingInitial">正在初始化 . . . 請稍候</string>
    <string name="ui_about_content">本遊戲為獨立者開發，如有任何意見，歡迎電郵至longtail360@gmail.com。</string>
    <string name="ui_about_aboutuseResourceAsBelow">本作品使用了以下素材：</string>
    <string name="ui_home_level">等級:</string>
    <string name="ui_home_exp">經驗:</string>
    <string name="ui_home_population">人口:</string>
    <string name="ui_home_coin">金幣:</string>
    <string name="ui_home_upgrade">升級($50)</string>
    <string name="ui_home_hp">生命值:</string>
    <string name="ui_home_log">歷史日誌</string>
    <string name="ui_home_cardForBuying">可招募的角色:</string>
    <string name="ui_home_buyingCardPos">基本({basic}%), 普通({common}%),精良({rare}%),史詩({epic}%), 傳說({legendary}%)</string>
    <string name="ui_home_refreshForBuying">刷新\n($20)</string>
    <string name="ui_home_team">隊伍:</string>
    <string name="ui_home_tactics">戰術</string>
    <string name="ui_home_item">物品</string>
    <string name="ui_home_holdCard">持有的角色:</string>
    <string name="ui_home_startAdv">開始探索</string>
    <string name="ui_home_continueAdv">繼續探索</string>
    <string name="ui_home_numOfFloor">層數:</string>
    <string name="ui_home_stageInfo">層數:{floor}\n怪物:{monster}\n血量:{hp}\n攻擊力:{attack}\n防禦力:{defense}</string>
    <string name="ui_home_advReady">出發準備中，切勿關閉</string>
    <string name="ui_home_passiveSkillTitle">上陣指定數量角色可觸發羈絆效果</string>
    <string name="ui_home_pleaseWait">請稍候</string>
    <string name="ui_home_stage">關卡{stageNo}:</string>
    <string name="ui_home_handCardIsFull">手牌已滿, 請出售角色</string>
    <string name="ui_home_coinNotEnougth">金幣不足</string>
    <string name="ui_home_overPopulation">隊伍人數超過了等級</string>
    <string name="ui_home_cardDesc_level">等級:</string>
    <string name="ui_home_cardDesc_cardInfo">生命值:{hp}  攻擊力:{attack}  防禦力:{defense}</string>
    <string name="ui_home_cardDesc_skill">技能:</string>
    <string name="ui_home_cardDesc_sellCard">出售可獲得: {coin}枚金幣</string>
    <string name="ui_home_cardDesc_sell">出售</string>
    <string name="ui_home_cardDesc_back">返回</string>
    <string name="ui_home_upgrade_notEnoughCoin">金幣不足</string>
    <string name="ui_home_refresh_notEnoughCoin">金幣不足</string>
    <string name="ui_home_upgrade_gotExp">已獲得4點經驗值</string>
    <string name="ui_home_help">說明</string>
    <string name="ui_home_setting">設定</string>
    <string name="ui_home_help_content">1. 招募任意一名角色\n2. 若成功招募3名相同角色, 可升級該角色\n3. 把角色放置於隊伍欄中\n4. 點擊\"開始探索\"進行地下城的探索</string>
    <string name="ui_home_noTeamCard">沒有隊伍成員</string>
    <string name="ui_home_buyCardAndPutToTeam">招募一名角色, 並把該角色放置於隊伍中</string>
    <string name="ui_home_overMaxItemNum">攜帶物品的數量超過上限 24 個</string>
    <string name="ui_home_overMaxItemNumContent">點擊 "物品" -> 把物品放於倉庫</string>
    <string name="ui_home_advProgressing">探索進行中</string>
    <string name="ui_home_cardUpgradeSuccess">已升級</string>
    <string name="ui_home_isStartNewAdv">是否開始新的探索?</string>
    <string name="ui_home_hp0IsStartNewAdv">生命值已歸零, 是否重新開始?</string>
    <string name="ui_history_logBtText">關卡{stage}:{stageName}</string>
    <string name="ui_main_cannotLoginGoogle">未能登入Google Play Service</string>
    <string name="ui_main_cannotLoginGoogleContent">請檢查網絡, 在重新開啟遊戲</string>
    <string name="ui_allCard_buyCrystal">購買水晶</string>
    <string name="ui_homeCardDesc_edit">編輯</string>
    <string name="ui_popup_cancel">取消</string>
    <string name="ui_popup_confirm">確定</string>
    <string name="ui_myItem_onBodyItemList">攜帶的物品列表</string>
    <string name="ui_myItem_inventory">倉庫物品列表</string>
    <string name="ui_myItem_itemList">物品列表</string>
    <string name="ui_myItem_hadBrought">己攜帶</string>
    <string name="ui_myItem_hadSaved">己存放</string>
    <string name="ui_myItem_advProgressing">探索進行中</string>
    <string name="ui_setting_uploadToGoogle">上載資料至雲端</string>
    <string name="ui_setting_downloadFromGoogle">從雲端下載資料</string>
    <string name="ui_setting_isUploadData">是否上載資料至雲端？</string>
    <string name="ui_setting_uploadDataRemark">1.雲端資料將會被覆蓋\n2. 授權Google Play不會使系統有權限讀取玩家的私人資料</string>
    <string name="ui_setting_uploading">資料上載中</string>
    <string name="ui_setting_downloading">資料下載中</string>
    <string name="ui_setting_pleaseWait">請稍候 . . .</string>
    <string name="ui_setting_successWrite">成功上載</string>
    <string name="ui_setting_isDownloadData">是否從雲端下載資料？</string>
    <string name="ui_setting_successRead">成功下載</string>
    <string name="ui_setting_cannotFindData">找不到資料</string>
    <string name="buyCrystal_buyCrystal">購買水晶</string>
    <string name="passiveSkillDescLayout_number">數量</string>
    <string name="passiveSkillDescLayout_skillResult">效果</string>
    <string name="passiveSkillDescLayout_passiveSkillTitle">上陣指定數量角色可觸發羈絆效果</string>
    <string name="cardIcon_upgrade">升級</string>
    <string name="item_redPotionSmall">紅色藥水</string>
    <string name="item_redPotionMiddle">進階紅色藥水</string>
    <string name="item_redPotionLarge">最進階紅色藥水</string>
    <string name="teamUseItem">隊伍使用了{item}</string>
    <string name="item_itemHpUp">紅色藥水</string>
    <string name="item_itemHpUp_desc">回復 {value} 點生命值</string>
    <string name="item_itemHpUp_battleDesc">隊伍回復了{value}點生命值</string>
    <string name="item_itemCdDown">藍色藥水</string>
    <string name="item_itemCdDown_desc">隊伍技能冷卻值減 1</string>
    <string name="item_itemCdDown_battleDesc">隊伍使用了藍色藥水, 技能冷卻值減少了 1</string>
    <string name="item_itemAttackUp">飯團</string>
    <string name="item_itemAttackUp_desc">提升{value}點攻擊力</string>
    <string name="item_itemAttackUp_battleDesc">隊伍使用了飯團, 攻擊力提升了{value}點</string>
    <string name="item_itemFire">炸藥</string>
    <string name="item_itemFire_desc">對所有敵人造成 {value} 點傷害, 並有30%機率造成燃燒狀態</string>
    <string name="item_itemFire_battleDesc">隊伍向怪物投擲了炸藥, 強烈爆炸使敵人受到了{value}點傷害</string>
    <string name="item_itemElectricity">電容</string>
    <string name="item_itemElectricity_desc">對所有敵人造成 {value} 點傷害, 並有30%機率造成觸電狀態</string>
    <string name="item_itemElectricity_battleDesc">隊伍向怪物投擲了電容, 電容釋放出高壓電流, 敵人受到了{value}點傷害</string>
    <string name="item_itemPotion">毒氣彈</string>
    <string name="item_itemPotion_desc">對所有敵人造成 {value} 點傷害, 並有30%機率造成中毒狀態</string>
    <string name="item_itemPotion_battleDesc">隊伍向怪物投擲了毒氣彈, 毒氣彈釋放出濃烈毒氣, 敵人受到了{value}點傷害</string>
    <string name="item_itemIce">千年寒冰</string>
    <string name="item_itemIce_desc">對所有敵人造成 {value} 點傷害, 並有30%機率造成冰凍狀態</string>
    <string name="item_itemIce_battleDesc">隊伍向怪物投擲了千年寒冰, 千年寒冰使怪物周圍的空氣急速冷凍, 敵人受到了{value}點傷害</string>
    <string name="item_itemSummonMonsterHeal">妖精的翅膀</string>
    <string name="item_itemSummonMonsterHeal_desc">召喚妖精為你作戰</string>
    <string name="item_itemSummonMonsterHeal_battleDesc">隊伍使用了妖精的翅膀, 於場上召喚了一名妖精</string>
    <string name="item_itemSummonMonsterSmall">符文石</string>
    <string name="item_itemSummonMonsterSmall_desc">召喚圖騰為你作戰</string>
    <string name="item_itemSummonMonsterSmall_battleDesc">隊伍使用了符文石, 一隻圖騰降落於場上</string>
    <string name="item_itemSummonMonsterMiddle">號角</string>
    <string name="item_itemSummonMonsterMiddle_desc">召喚灰熊為你作戰</string>
    <string name="item_itemSummonMonsterMiddle_battleDesc">隊伍使用了灰熊, 一隻灰熊降落於場上</string>
    <string name="item_itemSummonMonsterLarge">龍鱗片</string>
    <string name="item_itemSummonMonsterLarge_desc">召喚始生龍為你作戰</string>
    <string name="item_itemSummonMonsterLarge_battleDesc">隊伍使用了龍鱗片, 一隻白龍降落於場上</string>
    <string name="item_itemPerfume">誘惑香水</string>
    <string name="item_itemPerfume_desc">一回內所有敵人互相攻擊</string>
    <string name="item_itemPerfume_battleDesc">一回內所有敵人互相攻擊</string>
    <string name="action_attack">攻擊</string>
    <string name="action_target">目標</string>
    <string name="action_attackLowHp">攻擊最低血量敵人</string>
    <string name="action_escapeOne">把血量最低成員移離戰場</string>
    <string name="action_escapeTeam">逃跑</string>
    <string name="action_notOpenBox">不打開任何寶箱/罌罐/熔爐</string>
    <string name="action_notUseSkill">不使用技能</string>
    <string name="action_useRandomItem">使用隨機物品</string>
    <string name="action_useItemHpUp">使用紅色藥水</string>
    <string name="action_useItemCdDown">使用藍色藥水</string>
    <string name="action_useItemAttackUp">使用飯團</string>
    <string name="action_useItemFire">使用炸藥</string>
    <string name="action_useItemElectricity">使用電容</string>
    <string name="action_useItemPotion">使用毒氣彈</string>
    <string name="action_useItemIce">使用千年寒冰</string>
    <string name="action_useItemSummonMonsterHeal">使用妖精的翅膀</string>
    <string name="action_useItemSummonMonsterSmall">使用符文石</string>
    <string name="action_useItemSummonMonsterMiddle">使用號角</string>
    <string name="action_useItemSummonMonsterLarge">使用龍鱗片</string>
    <string name="action_useItemPerfume">誘惑香水</string>
    <string name="condition_onBattleStart">在戰鬥開始時</string>
    <string name="condition_onTurnStart">在每回合開始時</string>
    <string name="condition_all_card_hp">全員的HP</string>
    <string name="condition_all_monster_hp">所有敵人的HP</string>
    <string name="condition_anyone_hp">任意一人的HP</string>
    <string name="condition_anyoneMonster_hp">任意一名敵人的HP</string>
    <string name="condition_anytwoMonster_hp">任意兩名敵人的HP</string>
    <string name="condition_number_of_floor">探索層數</string>
    <string name="condition_number_of_monster">敵人數目</string>
    <string name="condition_any_two_hp">任意兩名伙伴的HP</string>
    <string name="condition_low_than">低於</string>
    <string name="condition_number_greater_than">個或以上</string>
    <string name="condition_floor_above">指定層以上</string>
    <string name="condition_floor_below">指定層以下</string>
    <string name="condition_floor_is">指定層</string>
    <string name="tactic_if">如果</string>
    <string name="tactic_negation">不符合</string>
    <string name="tactic_and">且</string>
    <string name="tactic_or">或</string>
    <string name="tactic_then">則</string>
    <string name="tactic_delete">刪除</string>
    <string name="tactic_action">行動</string>
    <string name="tactic_condition">條件</string>
    <string name="tactic_negatCondition">條件不符合的話行動</string>
    <string name="tactic_newTactic">新增戰術</string>
    <string name="tactic_newCondition">新增條件</string>
    <string name="tactic_editTactic">編輯戰術</string>
    <string name="tactic_save">儲存</string>
    <string name="tactic_edit">編輯</string>
    <string name="tactic_cancel">取消</string>
    <string name="tactic_up">向上</string>
    <string name="tactic_down">向下</string>
    <string name="tactic_hadActive">已生效</string>
    <string name="tactic_hadInactive">已失效</string>
    <string name="tactic_help">於每回合戰鬥開始時, 隊伍讀取戰術列表, 並由上至下檢查符合條件的戰術。每個戰術由多個條件和一個行動組成。條件之間由「且」和「或」組合而成, 「且」優先處理。如「A且B或C且D」的話，相當於「A且B」或「C且D」</string>
    <string name="log_hp">血量:</string>
    <string name="log_level">等級:</string>
    <string name="monster_hp">生命值:</string>
    <string name="monster_attack">攻擊力:</string>
    <string name="monster_defense">護甲:</string>
    <string name="card_race">種族:</string>
    <string name="card_clazz">職業:</string>
    <string name="card_race_human">人類</string>
    <string name="card_race_elf">精靈</string>
    <string name="card_race_spirit">元素</string>
    <string name="card_race_undead">不死</string>
    <string name="card_race_orcs">野獸</string>
    <string name="card_race_demon">惡魔</string>
    <string name="card_race_divinity">神族</string>
    <string name="card_attack">攻擊力:</string>
    <string name="card_defense">護甲:</string>
    <string name="card_skill">技能:</string>
</resources>