<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/operatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/andRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:buttonTint="@color/colorIcon"
                android:text="@string/tactic_and"/>
            <RadioButton android:id="@+id/orRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:buttonTint="@color/colorIcon"
                android:text="@string/tactic_or"/>
        </RadioGroup>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/cond_rectangle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:layout_margin="2dp"
        android:background="@drawable/ui_panel_list_item_desc">

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationX="5dp"
        android:translationY="5dp"
        android:text="@string/tactic_condition" />

        <CheckBox
            android:id="@+id/negateCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tactic_negatCondition"
            android:textColor="@color/colorText"
            android:buttonTint="@color/colorIcon"
            android:layout_marginRight="10dp"
        android:layout_gravity="top|right"/>
        <LinearLayout
            android:id="@+id/condParas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="5dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
        </LinearLayout>

        <Button
            android:id="@+id/deleteButton"
            android:layout_margin="5dp"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:text="@string/tactic_delete"
            android:textColor="@android:color/white"
            android:layout_gravity="bottom|right"
            android:background="@drawable/xml_button_small_black"/>
    </FrameLayout>
</LinearLayout>