<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/thisLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/backgroundLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_page_background_2">

    <FrameLayout
        android:translationX="-50dp"
        android:translationY="50dp"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:background="@drawable/item_red_half_header"
        >
        <TextView
            android:id="@+id/gameName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationY="-5dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/game_name" />
    </FrameLayout>

    <FrameLayout
        android:translationY="-120dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/ui_caption">

        <TextView
            android:id="@+id/initMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:alpha="0.8"
            android:textColor="@android:color/white"
            android:text="@string/ui_mainPage_doingInitial" />
    </FrameLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_gravity="bottom"
            android:translationY="-80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="0"/>


    <FrameLayout
        android:id="@+id/aboutBt"
        android:layout_gravity="left|bottom"
        android:translationY="-20dp"
        android:translationX="-10dp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/ui_dark_bar_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:alpha="0.8"
            android:textColor="@android:color/white"
            android:text="@string/ui_mainPage_about" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/leaveGame"
        android:layout_gravity="right|bottom"
        android:translationY="-20dp"
        android:translationX="10dp"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/ui_dark_bar_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="15sp"
            android:alpha="0.8"
            android:textColor="@android:color/white"
            android:text="@string/ui_mainPage_leave" />
    </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/comNameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <TextView
            android:id="@+id/com_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:translationY="-20dp"
            android:textSize="40sp"
            android:textColor="@android:color/white"
            android:text="Long Tail 360" />

    </FrameLayout>
</FrameLayout>
